2016-05-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r25470.

	* src/log.c (log_get_fd): New function.

	* src/log.h: Add new function prototype.

	* src/sighand.c (print_trace, sighand_segv): Make function
	async-signal-safe.

2016-05-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r25384, r25394 and r25397.

	* src/attack.c (attack_start): Fix memory leak.

	* src/nasl_plugins.c (nasl_plugin_launch): Fix memory leak.

	* src/pluginscheduler.c (hash_fill_deps): Fix memory leak.

2016-03-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r24812.

	* src/openvassd.c (openvassd_defaults): Add timeout_retry preference.

	* doc/openvassd.8.in: Update documentation.

2016-03-07  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r24613.

	* src/openvassd.c (openvassd_defaults): Add scanner_plugins_timeout
	preference.

	* src/pluginlaunch.c (plugin_launch): Use scanner_plugins_timeout as the
	default value for scanner plugins.

	* CMakeLists.txt: Add SCANNER_NVT_TIMEOUT variable.

	* doc/openvassd.8.in: Update documentation.

2015-12-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0.6.

2015-12-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0.5 release.

	* CHANGES: Updated.

2015-12-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r23991.

	* src/comm.c (send_plug_info): Fix segfault when an NVT has no name.

2015-08-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r23154.

	* src/openvassd.c (scanner_thread): Adjust process title for IPv4-mapped
	IPv6 address case.

2015-07-17  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r22852.

	* CMakeLists.txt: Install openvas-mkcert-client to "bin" instead of
	"sbin" to be FHS compliant. Ensure man page for openvas-mkcert-client
	is installed. Based on patch provided by Michal Ambroz.
