@@ -1,5 +1,12 @@
 2016-05-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
+	Backport r25481.
+
+	* src/sighand.c (print_trace): Add loop around write() call to handle
+	signal interrupts. Don't return on error.
+
+2016-05-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
 	Backport r25470.
 
 	* src/log.c (log_get_fd): New function.
